--- a/less/widgets.less
+++ b/less/widgets.less
@@ -76,14 +76,13 @@
         height: 100%;
     }
     .content-inner-wrap {
-        display: flex;
-        flex-direction: column;
+        .flex--display;
+        .flex--flex-direction(column);
         align-items: center;
         justify-content: center;
         min-height: 600px;
         margin: 0 auto;
         padding: 30px 5%;
-
         height: 100%;
     }
     .headline {
